Opened 14 years ago
Closed 14 years ago
#7400 closed bug (fixed)
"Leave mail on server" options not used right
Reported by: | jonas.kirilla | Owned by: | czeidler |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Servers/mail_daemon | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description (last modified by )
Having both options unset ..
[ ] Leave mail on server [ ] Remove mail from server when deleted // gray, inactive
.. mail gets left on the server.
Change History (4)
comment:1 by , 14 years ago
Description: | modified (diff) |
---|
comment:2 by , 14 years ago
comment:3 by , 14 years ago
Seems to work as expected now. Thanks.
(Please do set up accounts with more email service providers, for testing purposes.)
comment:4 by , 14 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Fixed in hrev41092 now. Also partial downloaded mails have been deleted from the server, ups and sorry. Tested it with yahoo.com and seems to work now. Maybe affect also your other bug...
Note:
See TracTickets
for help on using tickets.
Should be fixed in hrev41091. Could you test it? My gmail account deletes messages automatically in POP3 mode...