Take leave mail on server into account. Should fix #7400.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@41091 a95241bf-73f2-0310-859d-f6bbb57e9c96